kubernetes/policies/traefik-cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: traefik-allow-basic
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
  - fromEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  # Allow access to the specific backend application
  - toEndpoints:
    - matchLabels:
        app: bernardoforcillo-com
        tier: personal-website
        io.kubernetes.pod.namespace: bernardoforcillo-com
    toPorts:
    - ports:
      - port: "3000"
        protocol: TCP
  # Allow access to kube-apiserver (for Ingress Controller)
  - toEntities:
    - kube-apiserver
  # Allow access to the internet (ACME, external redirects)
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
