kubernetes/policies/webapp-cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: webapp-restricted
  namespace: bernardoforcillo-com
spec:
  endpointSelector:
    matchLabels:
      app: bernardoforcillo-com
      tier: personal-website
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: traefik
        io.kubernetes.pod.namespace: traefik
    toPorts:
    - ports:
      - port: "3000"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
